# koi

./: .gitignore  CMakeLists.txt  Makefile  MakefileCustom  README.md
benchmarks/: spsc_benchmarks.cc
benchmarks/boost/: boost_benchmarks.cc  boost_test.cc  bounded_buffer.hh  receiver.cc  receiver.hh  sender.hh  utils.hh
benchmarks/boost_lock_buffer/: bounded_buffer.hh  receiver.hh  sender.hh  utils.hh
benchmarks/boost_spsc/: boost_benchmarks.cc  receiver.hh  sender.hh
benchmarks/common/: args.cc  args.hh  bench.cc  bench.hh  launcher.cc  signals.cc  signals.hh  types.hh  utils.cc  utils.hh
benchmarks/koi_queue/: fixed_size.cc  koi_benchmarks.cc  koi_benchmarks.cpp
benchmarks/memcpy/: memcpy.cc
benchmarks/message_queue/: client.cc  message.cc  message.hh  mq.hh  queue_ops.cc  server.cc
benchmarks/named_pipe/: client.cc  server.cc
benchmarks/pipe/: pipe.cc
benchmarks/processor_effects/: cache_line.cc  cache_miss.cc  l1_l2.cc  op_dep.cc
benchmarks/shm/: client.cc  launcher.cc  server.cc  shm.cc  shm.hh
cpp/common/: koi_utils.cc  koi_utils.hh  logger.cc  logger.hh
cpp/fixed_size/koi_queue/: koi_queue.hh  koi_queue.tcc
cpp/fixed_size/receiver/: receiver.cc  receiver.hh
cpp/fixed_size/sender/: sender.hh
explorations/happens_before/: happens_before.cc
explorations/lamport/: lamport.cc
tests/: test_utils.hh
tests/fixed_size/koi_queue/: test_koi_queue.cpp  test_multiprocess.cpp  test_single_thread.cpp
